fix popupp hidden(z-index)

--- a/css/style.scss
+++ b/css/style.scss
@@ -163,6 +163,7 @@ body {
     margin-top: 4px;
     margin-right: 20px;
     position: absolute;
+    z-index: 300;
   }
 
   &__info-name {
